--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@ footer {
 
 body {
   font-family: "Poppins", sans-serif;
-  max-width: 500px;
   padding: 20px;
   margin: auto;
   width: 450px;
@@ -31,6 +30,7 @@ header {
   padding: 0;
 }
 
+h1,
 h2 {
   color: white;
   text-align: center;
@@ -39,9 +39,21 @@ h2 {
   font-size: 1.5em;
 }
 
+.big-title {
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
 a:link {
   text-decoration: none;
-  text-decoration: none;
+}
+
+a:visited {
+  color: white;
 }
 
 /* MAIN */
@@ -61,10 +73,104 @@ strong {
 
 /* ELEMENTI NEL MAIN - ARTICLE */
 
+.article-button {
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  background-color: lightgray;
+  border: 1px solid gray;
+}
 /* TABELLE */
+
+.diffusione {
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
+}
+
+table {
+  text-align: center;
+  letter-spacing: 1px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+tr > td {
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
+tr > th {
+  color: white;
+  background-color: #3567e8;
+  padding: 5px;
+  vertical-align: bottom;
+}
+
+tr:nth-of-type(odd) {
+  background-color: #eeeeee;
+  /* border-top: 1px solid #cecccc; Da rivedere
+  border-bottom: 1px solid #cecccc; Da rivedere */
+}
+
+tr:last-child {
+  border-bottom: solid #3567e9 2px;
+}
+
+hr {
+  color: blue;
+}
 
 /* FORM */
 
 /* ELEMENTI NELL' ASIDE */
 
+.articles-box {
+  box-sizing: border-box;
+  background-color: lightgray;
+  padding-top: 15px;
+  height: 150px;
+  text-align: left;
+  padding-left: 10px;
+  border-color: gray;
+  border-style: solid;
+}
+
+.articles-date {
+  margin-right: 5px;
+  position: relative;
+  font-size: 80%;
+  float: right;
+  bottom: 50px;
+  right: 30px;
+}
+
+.subscribe {
+  background-color: #3567e9;
+  color: white;
+  display: inline-block;
+  margin: 5px;
+  height: 30px;
+}
+
+.news {
+  box-sizing: border-box;
+  background-color: lightgray;
+  text-align: center;
+}
+
+.emailbox {
+  border-bottom: 1px dotted gray;
+  height: 30px;
+}
+
 /* FOOTER */
+
+footer {
+  box-sizing: border-box;
+  background-image: linear-gradient(to bottom, #0099cc, #006688);
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: white;
+  box-shadow: 5px 5px 5px #666666;
+}
